--- a/CSS/T13/index.html
+++ b/CSS/T13/index.html
@@ -48,7 +48,7 @@
         <header>
             <div class="wrapper">
                 <div class="left-side">
-                    <h1>Rafi Andrea</i></h1>
+                    <h1>Nicolas Simons</h1>
                     <ul>
                         <li>
                             <button>Support Manager <i class="fa-solid fa-arrow-right-long"></i></button>
@@ -62,7 +62,7 @@
                     <div class="profile-img">
                         <ul>
                             <li>
-                                <img src="public/assets/image/1.JPG" alt="">
+                                <img src="public/assets/image/nico.jpg" alt="">
                             </li>
                             <li>
                                 <p>Send Nude Pls</p>
@@ -82,6 +82,78 @@
                 </div>
             </div>
         </header>
+        <main>
+            <div class="card-list">
+                <div class="card card-1">
+                    <div class="head">
+                        <h3>LATEST POST</h3>
+                        <i class="fa-solid fa-arrow-right-long"></i>
+                    </div>
+                    <div class="body">
+                        <img src="public/assets/image/bjir.jpg" alt="">
+                        <ul>
+                            <li>Design Generate</li>
+                            <li>45k views</li>
+                        </ul>
+                    </div>
+                    <div class="footer">
+                        <p>Testing popular <u><b>designing tools</b></u> and evalusting them with Metrolab crew and artist.</p>
+                    </div>
+                </div>
+                <div class="card card-2">
+                    <div class="head">
+                        <h3>LATEST POST</h3>
+                        <i class="fa-solid fa-arrow-right-long"></i>
+                    </div>
+                    <div class="body">
+                        <img src="public/assets/image/bjir.jpg" alt="">
+                        <ul>
+                            <li>Design Generate</li>
+                            <li>45k views</li>
+                        </ul>
+                    </div>
+                    <div class="footer">
+                        <p>Testing popular <u><b>designing tools</b></u> and evalusting them with Metrolab crew and artist.</p>
+                    </div>
+                </div>
+                <div class=" card card-3">
+                    <div class="head">
+                        <h3>LATEST POST</h3>
+                        <i class="fa-solid fa-arrow-right-long"></i>
+                    </div>
+                    <div class="body">
+                        <img src="public/assets/image/bjir.jpg" alt="">
+                        <ul>
+                            <li>Design Generate</li>
+                            <li>45k views</li>
+                        </ul>
+                    </div>
+                    <div class="footer">
+                        <p>Testing popular <u><b>designing tools</b></u> and evalusting them with Metrolab crew and artist.</p>
+                    </div>
+                </div>
+            </div>
+        </main>
+        <footer>
+            <div class="top-line">
+                <span>16 DECEMBER 2022</span>
+            </div>
+            <hr>
+            <div class="bottom-line">
+                <div class="left">
+                    <span>01</span>
+                    <span>ALL RIGHTS RESERVED ©️2022</span>
+                </div>
+                <div class="mid">
+                    <span>COOPERATION</span>
+                    <span>ENGLISH</span>
+                </div>
+                <div class="right">
+                    <span><i class="fa-solid fa-arrow-right-long"></i></span>
+                    <span>GET STARTED</span>
+                </div>
+            </div>
+        </footer>
     </section>
 </body>
 </html>
